(executable
 (name belenios_jslib)
 (modules belenios_jslib)
 (modes js)
 (js_of_ocaml (javascript_files ../../../../ext/sjcl/sjcl.js ../../../../ext/jsbn/BigIntCompatFull.js))
 (libraries js_of_ocaml-lwt belenios-platform-js belenios belenios_js)
 (preprocess (pps js_of_ocaml-ppx)))

(env
  (dev
    (flags (:standard -w -33))))

(executable
 (name belenios_jslib2)
 (modules belenios_jslib2)
 (modes js)
 (js_of_ocaml (javascript_files ../../../../ext/sjcl/sjcl.js ../../../../ext/jsbn/BigIntCompatFull.js))
 (libraries js_of_ocaml-lwt belenios-platform-js belenios belenios_js belenios_tool_common)
 (preprocess (pps js_of_ocaml-ppx)))
